--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,14 @@
 <div class="navbar">
   <div class="navbar-inner">
     <a class="brand" href="#">Baird-Conklin Music</a>
-    <ul class="nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
+    <form class="navbar-search pull-left">
+      <input type="text" class="search-query" placeholder="Search">
+    </form>
+    <ul class="nav pull-left">
+      <li><a href="#">Browse</a></li>
+    </ul>
+    <ul class="nav pull-right">
+      <li><a href="#">Login</a></li>
     </ul>
   </div>
 </div>
