--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="navbar navbar-inverse">
   <div class="navbar-inner">
     <a class="brand" href="#">Baird-Conklin Music</a>
     <form class="navbar-search pull-left">
@@ -8,7 +8,21 @@
       <li><a href="#">Browse</a></li>
     </ul>
     <ul class="nav pull-right">
-      <li><a href="#">Login</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          Account
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li>
+            <a href="#">Create</a>
+          </li>
+          <li>
+            <a href="#">Sign In</a>
+          </li>
+        </ul>
+      </li>
+      <li><a href="mailto:tconklin63@gmail.com">Contact Us</a></li>
     </ul>
   </div>
 </div>
