More tweaks to home page and added more notes

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
           </li>
         </ul>
       </li>
-      <li><a href="mailto:tconklin63@gmail.com">Contact Us</a></li>
+      <li><a href="#">Contact Us</a></li>
     </ul>
   </div>
 </div>
