--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,9 +3,10 @@
     <h2 class="text-center">Music for Church, School, Home, and Liturgy</h2>
     <div class="row-fluid">
       <div class="span6">
-        <h4>Thank you for visiting our site.  We have public-domain music and original music composed by Lisa Baird-Conklin and 
+        <h4 class="text-center">Thank you for visiting our site</h4>
+        <p>We have public-domain music and original music composed by Lisa Baird-Conklin and 
         Thomas Conklin. Much of the music here is free to download in PDF form while other pieces may be purchased. We will also 
-        write commissioned pieces if you have special needs.</h4>
+        write commissioned pieces if you have special needs.</p>
       </div>
       <div class="span6">
         <img src="assets/circle_staff.jpg"/>
