Added authlogic gem

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,9 @@
       <div class="span6">
         <h4 class="text-center">Thank you for visiting our site</h4>
         <p>We have public-domain music and original music composed by Lisa Baird-Conklin and 
-        Thomas Conklin. Much of the music here is free to download in PDF form while other pieces may be purchased. We will also 
-        write commissioned pieces if you have special needs.</p>
+        Thomas Conklin. Much of the music here is free to download in PDF form while other pieces 
+        may be purchased. We can also provide customizations and
+        write commissioned pieces specifically suited to your needs for an additional fee.</p>
       </div>
       <div class="span6">
         <img src="assets/circle_staff.jpg"/>
