Changes to home page.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,10 +4,12 @@
     <div class="row-fluid">
       <div class="span6">
         <h4 class="text-center">Thank you for visiting our site</h4>
-        <p>We have public-domain music and original music composed by Lisa Baird-Conklin and 
+        <p>We have public-domain music, arrangements, and original music composed, arranged, and edited by Lisa Baird-Conklin and 
         Thomas Conklin. Much of the music here is free to download in PDF form while other pieces 
         may be purchased. We can also provide customizations and
         write commissioned pieces specifically suited to your needs for an additional fee.</p>
+        <br/>
+        <h4 class="text-center">What's New?</h4>
       </div>
       <div class="span6">
         <img src="assets/circle_staff.jpg"/>
