Added sign up page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
       <%= f.text_field :name, :placeholder => "Full Name" %>
       <%= f.text_field :email, :placeholder => "Email" %>
       <%= f.password_field :password, :placeholder => "Password" %>
-      <%= f.password_field :confirm_password, :placeholder => "Confirm Password" %>
+      <%= f.password_field :password_confirmation, :placeholder => "Confirm Password" %>
       <div class="controls text-right">
         <%= link_to "cancel", root_url %>
         <%= f.submit "Save", :class => "btn btn-primary" %>
