--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse">
+<div class="navbar">
   <div class="navbar-inner">
     <a class="brand" href="<%=root_url%>">Baird-Conklin Music</a>
     <form class="navbar-search pull-left">
