--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
   <div class="span4 offset4 well text-center">
     <h2>Create An Account</h2>
     <%= form_for @user do |f| %>
+      <%= f.error_messages %><br/>
       <%= f.text_field :name, :placeholder => "Full Name" %>
       <%= f.text_field :email, :placeholder => "Email" %>
       <%= f.password_field :password, :placeholder => "Password" %>
