Removed authlogic, added encrypted_password and salt

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
           Account
+         <% end %>
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
