--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,10 @@
       <li><a href="#">Browse</a></li>
     </ul>
     <ul class="nav pull-right">
-      <% if @user %>
+      <% if @current_user %>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            <%= @user.name %>
+            <%= @current_user.name %>
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
