--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,11 @@
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
+            <% if @current_user.admin %>
+              <li>
+                <a href="#">Admin</a>
+              </li>
+            <% end %>
             <li>
               <a href="<%=logout_users_path%>">Sign Out</a>
             </li>
