--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="row-fluid">
   <div class="span8 offset2 well">
+    <%= render :partial => 'shared/flash_messages'%>
     <h2 class="text-center">Music for Church, School, Home, and Liturgy</h2>
     <div class="row-fluid">
       <div class="span6">
