--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,17 +9,25 @@
     </ul>
     <ul class="nav pull-right">
       <% if @current_user %>
+        <% if @current_user.admin %>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            Admin
+            <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="<%=compositions_path%>">Manage Compositions</a>
+            </li>
+          </ul>
+        </li>
+        <% end %>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
             <%= @current_user.name %>
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <% if @current_user.admin %>
-              <li>
-                <a href="#">Admin</a>
-              </li>
-            <% end %>
             <li>
               <a href="<%=logout_users_path%>">Sign Out</a>
             </li>
