--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,6 +1,7 @@
 <div class="row-fluid">
   <div class="span4 offset4 well text-center">
     <h3>Sign In</h3>
+    <%= render :partial => 'shared/flash_messages'%>
     <%= form_tag login_users_path, :method => 'post' do |f| %>
       <%= text_field_tag 'email', '', :placeholder => "Email" %>
       <%= password_field_tag 'password', '', :placeholder => "Password" %>
