Improved login errors

--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,5 +1,14 @@
 <div id="flash_messages">
-  <% flash.each do |key, value| %>
-    <%= content_tag(:div, value, :class => "flash #{key}") %>
+
+  <% if flash[:notice] %>
+    <p id="flash_notice" class="messages notice"><%= flash[:notice] %></p>
+    <%= javascript_tag "$('#flash_notice').effect('highlight',{},1000);" %>
   <% end %>
+
+  <% if flash[:error] || flash[:errors] || flash[:warning] %>
+    <p id="flash_errors" class="messages errors"><%= flash[:error] || flash[:errors] || flash[:warning]%></p>
+    <%= javascript_tag "$('#flash_errors').effect('highlight',{},1000);" %>
+  <% end %>
+
+  <% flash[:error] = flash[:errors] = flash[:warning] = flash[:notice] = nil %>
 </div>
