--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -4,7 +4,10 @@
     <%= render :partial => 'shared/flash_messages'%>
     <%= form_tag login_users_path, :method => 'post' do |f| %>
       <%= text_field_tag 'email', '', :placeholder => "Email" %>
-      <%= password_field_tag 'password', '', :placeholder => "Password" %>
+      <%= password_field_tag 'password', '', :placeholder => "Password" %><br/><br/>
+      <div class="text-left">
+        Need an account? <%= link_to "create account", new_user_path %>
+      </div>
       <div class="controls text-right">
         <%= link_to "cancel", root_url %>
         <%= submit_tag "Sign In", :class => "btn btn-primary" %>
