--- a/app/views/compositions/new.html.erb
+++ b/app/views/compositions/new.html.erb
@@ -1,5 +1,16 @@
 <div class="row-fluid">
-  <div class="span8 offset2 well">
+  <div class="span6 offset3 well">
     <h2 class="text-center">Create Composition</h2>
+    <%= form_for @composition do |f| %>
+      <%= f.error_messages %><br/>
+      <%= f.text_field :name, :placeholder => "Title", :class => "input-xxlarge" %>
+      <%= f.text_area :description, :placeholder => "Description", :class => "input-xxlarge", :rows => 5 %>
+      <%= f.text_field :voicing, :placeholder => "Voicing or Instrumentation", :class => "input-xxlarge" %>
+      <div class="controls text-right">
+        <%= link_to "cancel", compositions_path %>
+        <%= f.submit "Save", :class => "btn btn-primary" %>
+        <%= f.submit "Publish", :class => "btn btn-success" %>
+      </div>
+    <% end %>
   </div>
 </div>
