More changes for bluehost deployment

--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -9,7 +9,7 @@
         Need an account? <%= link_to "create account", new_user_path %>
       </div>
       <div class="controls text-right">
-        <%= link_to "cancel", root_url %>
+        <%= link_to "cancel", "/" %>
         <%= submit_tag "Sign In", :class => "btn btn-primary" %>
       </div>
     <% end %>
