--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
         Already have an account? <%= link_to "sign in", login_users_path %>
       </div>
       <div class="controls text-right">
-        <%= link_to "cancel", root_url %>
+        <%= link_to "cancel", "/" %>
         <%= f.submit "Save", :class => "btn btn-primary" %>
       </div>
     <% end %>
