--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar">
   <div class="navbar-inner">
-    <a class="brand" href="<%=root_url%>">Baird-Conklin Music</a>
+    <a class="brand" href="/">Baird-Conklin Music</a>
     <form class="navbar-search pull-left">
       <input type="text" class="search-query" placeholder="Search">
     </form>
