Added edit user page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,9 @@
           </a>
           <ul class="dropdown-menu">
             <li>
+              <a href="<%=edit_user_path(@current_user)%>">Edit Account</a>
+            </li>
+            <li>
               <a href="<%=logout_users_path%>">Sign Out</a>
             </li>
           </ul>
