Add user admin functionality and cleanup UI

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,6 +11,10 @@
         write commissioned pieces specifically suited to your needs for an additional fee.</p>
         <br/>
         <h4 class="text-center">What's New?</h4>
+        <p>This website is currently in progress. I am currently creating the functionality for us to upload our compositions so
+          they will be viewable and searchable.  The only thing you can do right now is to create an account.  Please check back later.
+          I hope to have our music up soon.</p>
+          <p>--Thomas Conklin</p>
       </div>
       <div class="span6">
         <img src="assets/circle_staff.jpg"/>
