--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,15 +3,19 @@
     <h3>Create An Account</h3>
     <%= form_for @user do |f| %>
       <%= f.error_messages %><br/>
-      <%= f.text_field :name, :placeholder => "Full Name" %>
-      <%= f.text_field :email, :placeholder => "Email" %>
-      <%= f.password_field :password, :placeholder => "Password" %>
+      <%= f.text_field :name, :placeholder => "Full Name" %><br/>
+      <%= f.text_field :email, :placeholder => "Email" %><br/>
+      <%= f.password_field :password, :placeholder => "Password" %><br/>
       <%= f.password_field :password_confirmation, :placeholder => "Confirm Password" %><br/><br/>
       <div class="text-left">
         Already have an account? <%= link_to "sign in", login_users_path %>
       </div>
       <div class="controls text-right">
-        <%= link_to "cancel", "/" %>
+        <% if !@current_user || @user == @current_user %>
+          <%= link_to "cancel", "/" %>
+        <% else %>
+          <%= link_to "cancel", :users %>
+        <% end %>
         <%= f.submit "Save", :class => "btn btn-primary" %>
       </div>
     <% end %>
