--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -7,6 +7,7 @@
     No Compositions Found
     <% end %>
     <div class="controls text-right">
+      <%= link_to "cancel", "/" %>
       <%= link_to "Create New Composition", new_composition_path, :class => "btn btn-primary" %>
     </div>
   </div>
