--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,10 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a href="<%=compositions_path%>">Manage Compositions</a>
+              <a href="<%=compositions_path%>">Compositions</a>
+            </li>
+            <li>
+              <a href="<%=users_path%>">Users</a>
             </li>
           </ul>
         </li>
