--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,9 @@
           </a>
           <ul class="dropdown-menu">
             <li>
+              <a href="<%=categories_path%>">Categories</a>
+            </li>
+            <li>
               <a href="<%=compositions_path%>">Compositions</a>
             </li>
             <li>
