--- a/app/views/compositions/new.html.erb
+++ b/app/views/compositions/new.html.erb
@@ -13,7 +13,7 @@
       <%= f.text_field :lyricist, :placeholder => "Lyricist", :class => "input-xxlarge" %>
       <%= f.text_area :description, :placeholder => "Description", :class => "input-xxlarge", :rows => 5 %>
       <%= f.text_field :voicing, :placeholder => "Voicing or Instrumentation", :class => "input-xxlarge" %>
-      <%= f.text_field :category, :placeholder => "Category", :class => "input-xxlarge" %>
+      <%= f.select :category, options_from_collection_for_select(Category.find(:all, :order => :name), :id, :name) %>
       <br/>
       <%= f.label :sheet_music, "Upload Sheet Music"%>
       <%= f.file_field :sheet_music %>
