Add border to user table

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="span8 offset2 well">
     <h2 class="text-center">Manage Users</h2>
     <% if @user_list && @user_list.size > 0 %>
-      <table class='table table-striped'>
+      <table class='table table-striped table-bordered'>
       	<tr>
           <th>Name</th>
           <th>Email</th>
