--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,11 +2,21 @@
   <div class="span8 offset2 well">
     <h2 class="text-center">Manage Categories</h2>
     <% if @categories && @categories.size > 0 %>
-      <% @categories.each do |category| %>
-        <%=category.name%> 
-        <%= link_to "delete", { :action => "delete", :id => category.id },
-          :confirm => "Are you sure you want to delete this category?", :method => :delete %><br/>
-      <% end %>
+      <table class='table table-striped table-bordered'>
+        <tr>
+          <th>Name</th>
+          <th>Actions</th>
+        </tr>
+        <% @categories.each do |category| %>
+        <tr>
+          <td><%=category.name%></td>
+          <td>
+            <%= link_to "delete", { :action => "delete", :id => category.id },
+              :confirm => "Are you sure you want to delete this category?", :method => :delete %>
+          </td>
+        </tr>
+        <% end %>
+      </table>
     <% else %>
       No Categories Found
     <% end %>
