Added prime number generator and varios fixes

--- a/app/views/layouts/_math_header.html.erb
+++ b/app/views/layouts/_math_header.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar">
   <div class="navbar-inner">
-    <a class="brand" href="/">Baird-Conklin Math</a>
+    <a class="brand" href="http://<%=HOST%>/bairdconklinmath">Baird-Conklin Math</a>
   </div>
 </div>
