--- a/app/views/static_pages/math.html.erb
+++ b/app/views/static_pages/math.html.erb
@@ -4,7 +4,8 @@
     <h2 class="text-center">Baird-Conklin Math</h2>
     <div class="row-fluid">
       <div class="span6">
-        This site is currently under construction.
+        <h4>Math Tools</h4>
+        <%= link_to 'Prime Number Generator', 'bairdconklinmath/mathtools/primes' %>
       </div>
       <div class="span6">
         <img src="assets/mathheart.jpg"/>
