--- a/public/bairdconklinmath/index.html.erb
+++ b/public/bairdconklinmath/index.html.erb
@@ -2,14 +2,14 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url=http://<%=HOST%>/bairdconklinmath">
+    <meta http-equiv="refresh" content="1;url=http://<%=HOST_NAME%>/bairdconklinmath">
     <script type="text/javascript">
-      window.location.href = "http://<%=HOST%>/bairdconklinmath";
+      window.location.href = "http://<%=HOST_NAME%>/bairdconklinmath";
     </script>
     <title>Page Redirection</title>
   </head>
   <body>
     <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-    If you are not redirected automatically, follow the <a href='http://<%=host_with_port%>/bairdconklinmath'>link to Baird-Conklin Math</a>
+    If you are not redirected automatically, follow the <a href='http://<%=HOST_NAME%>/bairdconklinmath'>link to Baird-Conklin Math</a>
   </body>
 </html>
