--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
+  <%= render 'layouts/like' %>
   <%= yield %>
-  <%= render 'layouts/footer' %>
 </body>
 </html>
