Updated tasks and fixed prime range message

--- a/app/views/mathtools/primes.html.erb
+++ b/app/views/mathtools/primes.html.erb
@@ -34,7 +34,7 @@ function getPrimes() {
       errors = errors + "Upper Limit must be greater than Lower Limit\n";
     }
     if (parseInt(upperLimit) > 100000) {
-      errors = errors + "Upper Limit must be less than 1000000\n";
+      errors = errors + "Upper Limit must be less than 100000\n";
     }
     if (upperLimit - lowerLimit > 200) {
       errors = errors + "Range must be 200 or less\n";
