--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,9 @@
             <li>
               <a href="<%=users_path%>">Users</a>
             </li>
+            <li>
+              <a href="<%=voicings_path%>">Voicing and Instrumentation</a>
+            </li>
           </ul>
         </li>
         <% end %>
