Various fixes and updates

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
   <div class="span6 offset3 well">
-    <h2 class="text-center">Create Category</h2>
+    <h2 class="text-center">Edit Category</h2>
     <%= form_for @category do |f| %>
       <%= f.error_messages %><br/>
       <%= f.text_field :name, :placeholder => "Category Name", :class => "input-xxlarge" %>
