--- a/app/views/voicings/edit.html.erb
+++ b/app/views/voicings/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
   <div class="span6 offset3 well">
-    <h2 class="text-center">Create Voicing or Instrumentation</h2>
+    <h2 class="text-center">Edit Voicing or Instrumentation</h2>
     <%= form_for @voicing do |f| %>
       <%= f.error_messages %><br/>
       <%= f.text_field :name, :placeholder => "Voicing or Instrumentation Name", :class => "input-xxlarge" %>
