--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -1,16 +1,28 @@
 <div class="row-fluid">
   <div class="span8 offset2 well">
     <h2 class="text-center">Manage Compositions</h2>
+    <table class="table table-striped table-bordered">
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Voicing</th>
+        <th>Sheet Music</th>
+        <th>Recording</th>
+        <th>Action</th>
+      </tr>
     <% if @compositions && @compositions.size > 0 %>
       <% @compositions.each do |composition| %>
-        <%=composition.name%> 
-        <%=composition.description%> 
-        <%=composition.voicing%> 
-        <%=composition.sheet_music_url%> 
-        <%=composition.recording_url%>
-        <%= link_to "delete", { :action => "delete", :id => composition.id },
-          :confirm => "Are you sure you want to delete this composistion?", :method => :delete %><br/>
+        <tr>
+          <td><%= composition.name %></td>
+          <td><%= composition.description %></td>
+          <td><%= Voicing.find(composition.voicing).name %></td>
+          <td><%= link_to 'sheet music', '/uploads/' + composition.sheet_music_url %></td>
+          <td><%= link_to 'recording', '/uploads/' + composition.recording_url %></td>
+          <td><%= link_to "delete", { :action => "delete", :id => composition.id },
+            :confirm => "Are you sure you want to delete this composistion?", :method => :delete %></td>
+        </tr>
       <% end %>
+    </table>
     <% else %>
       No Compositions Found
     <% end %>
