--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -1,10 +1,11 @@
 <div class="row-fluid">
-  <div class="span8 offset2 well">
+  <div class="span10 offset1 well">
     <h2 class="text-center">Manage Compositions</h2>
     <table class="table table-striped table-bordered">
       <tr>
         <th>Name</th>
         <th>Description</th>
+        <th>Category</th>
         <th>Voicing</th>
         <th>Sheet Music</th>
         <th>Recording</th>
@@ -15,11 +16,15 @@
         <tr>
           <td><%= composition.name %></td>
           <td><%= composition.description %></td>
+          <td><%= Category.find(composition.category).name %></td>
           <td><%= Voicing.find(composition.voicing).name %></td>
           <td><%= link_to 'sheet music', '/uploads/' + composition.sheet_music_url %></td>
           <td><%= link_to 'recording', '/uploads/' + composition.recording_url %></td>
-          <td><%= link_to "delete", { :action => "delete", :id => composition.id },
-            :confirm => "Are you sure you want to delete this composistion?", :method => :delete %></td>
+          <td>
+            <%= link_to "edit", { :action => "edit", :id => composition.id } %>
+            <%= link_to "delete", { :action => "delete", :id => composition.id },
+              :confirm => "Are you sure you want to delete this composistion?", :method => :delete %>
+          </td>
         </tr>
       <% end %>
     </table>
