Added prime factorization page

--- a/app/views/static_pages/math.html.erb
+++ b/app/views/static_pages/math.html.erb
@@ -5,7 +5,8 @@
     <div class="row-fluid">
       <div class="span6">
         <h4>Math Tools</h4>
-        <%= link_to 'Prime Number Generator', 'bairdconklinmath/mathtools/primes' %>
+        <%= link_to 'Prime Number Generator', 'bairdconklinmath/mathtools/primes' %><br/>
+        <%= link_to 'Prime Factorization', 'bairdconklinmath/mathtools/factor' %>
       </div>
       <div class="span6">
         <img src="assets/mathheart.jpg"/>
