Added external math links

--- a/app/views/mathtools/primes.html.erb
+++ b/app/views/mathtools/primes.html.erb
@@ -16,5 +16,6 @@
           <td id="results">&nbsp;</td>
         </tr>
       </table>
+      <%= link_to 'back', '/bairdconklinmath' %>
   </div>
 </div>
