--- a/app/views/mathtools/factor.html.erb
+++ b/app/views/mathtools/factor.html.erb
@@ -13,5 +13,6 @@
           <td id="results">&nbsp;</td>
         </tr>
       </table>
+      <%= link_to 'back', '/bairdconklinmath' %>
   </div>
 </div>
