--- a/app/views/static_pages/math.html.erb
+++ b/app/views/static_pages/math.html.erb
@@ -7,6 +7,9 @@
         <h4>Math Tools</h4>
         <%= link_to 'Prime Number Generator', 'bairdconklinmath/mathtools/primes' %><br/>
         <%= link_to 'Prime Factorization', 'bairdconklinmath/mathtools/factor' %>
+        <h4>Math Links</h4>
+        <%= link_to 'Kahn Academy', 'https://www.khanacademy.org', :target => '_blank' %><br/>
+        <%= link_to 'math.com', 'http://math.com', :target => '_blank' %>
       </div>
       <div class="span6">
         <img src="assets/mathheart.jpg"/>
