Added links between music and math

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,8 @@
   <%= render 'layouts/header' %>
   <%= render 'layouts/like' %>
   <%= yield %>
+  <div class='text-center'>
+    <%= link_to 'Baird-Conklin Math', '/bairdconklinmath'%>
+  </div>
 </body>
 </html>
