--- a/app/views/layouts/math_layout.html.erb
+++ b/app/views/layouts/math_layout.html.erb
@@ -9,5 +9,8 @@
 <body>
   <%= render 'layouts/math_header' %>
   <%= yield %>
+  <div class='text-center'>
+    <%= link_to 'Baird-Conklin Music', '/'%>
+  </div>
 </body>
 </html>
