initial checkin for reversi

--- a/app/views/static_pages/math.html.erb
+++ b/app/views/static_pages/math.html.erb
@@ -10,6 +10,8 @@
         <h4>Math Links</h4>
         <%= link_to 'Kahn Academy', 'https://www.khanacademy.org', :target => '_blank' %><br/>
         <%= link_to 'math.com', 'http://math.com', :target => '_blank' %>
+        <h4>Games</h4>
+        <%= link_to 'Reversi', 'bairdconklinmath/games/reversi' %>
       </div>
       <div class="span6">
         <img src="assets/mathheart.jpg"/>
