Added Reversi score

--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -8,6 +8,7 @@
     <div class="text-center">
       <canvas id="myCanvas" width="400" height="400" style="border:2px solid #000000;"></canvas>
     </div>
+    <div class='message text-center' id='score'>&nbsp;</div>
     <%= link_to 'back', '/bairdconklinmath' %>
   </div>
 </div>
