--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -2,7 +2,8 @@
   <div class="span6 offset3 well">
     <%= render :partial => 'shared/flash_messages'%>
     <h2 class="text-center">Reversi</h2>
-    <a href='#' onclick='newGame();'>New Game</a><br/>
+    <a href="javascript:void(0);" onclick='newGame();'>new</a> | 
+    <a href="javascript:void(0);" onclick='undo();' class='text-right'>undo</a><br/>
     <div class='message text-center' id='message'>&nbsp;</div>
     <div class='error text-center' id='alertMessage'>&nbsp;</div>
     <div class="text-center">
