Added random move and fixed bugs

--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -4,7 +4,8 @@
     <h2 class="text-center">Reversi</h2>
     <a href="javascript:void(0);" onclick='newGame();'>new</a> | 
     <a href="javascript:void(0);" onclick='undo();'>undo</a> | 
-    <a href="javascript:void(0);" onclick='redo();'>redo</a>
+    <a href="javascript:void(0);" onclick='redo();'>redo</a> | 
+    <a href="javascript:void(0);" onclick='randomMove();'>random move</a><br>
     <br/>
     <div class='message text-center' id='message'>&nbsp;</div>
     <div class='error text-center' id='alertMessage'>&nbsp;</div>
