Added max flips to Reversi

--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -5,7 +5,9 @@
     <a href="javascript:void(0);" onclick='newGame();'>new</a> | 
     <a href="javascript:void(0);" onclick='undo();'>undo</a> | 
     <a href="javascript:void(0);" onclick='redo();'>redo</a> | 
-    <a href="javascript:void(0);" onclick='randomMove();'>random move</a><br>
+    <a href="javascript:void(0);" onclick='randomMove();'>random move</a> | 
+    <a href="javascript:void(0);" onclick='maxFlips();'>max flips</a>
+    <br>
     <br/>
     <div class='message text-center' id='message'>&nbsp;</div>
     <div class='error text-center' id='alertMessage'>&nbsp;</div>
