added best position straegy to Reversi

--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -6,7 +6,8 @@
     <a href="javascript:void(0);" onclick='undo();'>undo</a> | 
     <a href="javascript:void(0);" onclick='redo();'>redo</a> | 
     <a href="javascript:void(0);" onclick='randomMove();'>random move</a> | 
-    <a href="javascript:void(0);" onclick='maxFlips();'>max flips</a>
+    <a href="javascript:void(0);" onclick='maxFlips();'>max flips</a> | 
+    <a href="javascript:void(0);" onclick='bestPosition();'>best position</a>
     <br>
     <br/>
     <div class='message text-center' id='message'>&nbsp;</div>
