Refactored to prepare for minimax implementation

--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -7,7 +7,9 @@
     <a href="javascript:void(0);" onclick='redo();'>redo</a> | 
     <a href="javascript:void(0);" onclick='randomMove();'>random move</a> | 
     <a href="javascript:void(0);" onclick='maxFlips();'>max flips</a> | 
-    <a href="javascript:void(0);" onclick='bestPosition();'>best position</a>
+    <a href="javascript:void(0);" onclick='bestPosition();'>best position</a> | 
+    <a href="javascript:void(0);" onclick='heuristic();'>heuristic</a> | 
+    <a href="javascript:void(0);" onclick='minimax();'>minimax</a>
     <br>
     <br/>
     <div class='message text-center' id='message'>&nbsp;</div>
