--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -2,7 +2,7 @@
   <div class="span6 offset3 well">
     <%= render :partial => 'shared/flash_messages'%>
     <h2 class="text-center">Reversi</h2>
-    <a href="javascript:void(0);" onclick='newGame();'>new</a> | 
+    <%= link_to 'new', "javascript:newGame();", :confirm => 'Are you sure you want to start a new game?'%> | 
     <a href="javascript:void(0);" onclick='undo();'>undo</a> | 
     <a href="javascript:void(0);" onclick='redo();'>redo</a> | 
     <a href="javascript:void(0);" onclick='randomMove();'>random move</a> | 
