--- a/app/views/games/test_reversi.html.erb
+++ b/app/views/games/test_reversi.html.erb
@@ -8,7 +8,7 @@
     <a href="javascript:void(0);" onclick='randomMove();'>random move</a> | 
     <a href="javascript:void(0);" onclick='maxFlips();'>max flips</a> | 
     <a href="javascript:void(0);" onclick='bestPosition();'>best position</a> | 
-    <a href="javascript:void(0);" onclick='minimax();'>minimax</a>
+    <a href="javascript:void(0);" onclick='minimax(5);'>minimax</a>
     <br>
     <br/>
     <div class='message text-center' id='message'>&nbsp;</div>
