--- a/app/views/games/reversi.html.erb
+++ b/app/views/games/reversi.html.erb
@@ -8,9 +8,9 @@
     <button class="btn btn-info" type="button" onclick="redo();">redo</button>
     <button class="btn btn-primary" type="button" onclick="redo2();">redo x 2</button><br/>
     <strong>opponent:</strong> 
-    <input type="radio" name="opponent" onclick="selectOpponent(1);" value="1"/> white
-    <input type="radio" name="opponent" onclick="selectOpponent(-1);" value="-1" checked/> black
-    <input type="radio" name="opponent" onclick="selectOpponent(0)" value="0"/> human
+    <input type="radio" name="opponent" id="white" onclick="selectOpponent(1);" value="1"/> white
+    <input type="radio" name="opponent" id="black" onclick="selectOpponent(-1);" value="-1" checked/> black
+    <input type="radio" name="opponent" id="human" onclick="selectOpponent(0)" value="0"/> human
     <select id="level" onchange="selectLevel()">
       <option value="1">level 1 - newbie</option>
       <option value="2">level 2 - amateur</option>
