Added manage files page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,9 @@
               <a href="<%=compositions_path%>">Compositions</a>
             </li>
             <li>
+              <a href="<%=files_path%>">Files</a>
+            </li>
+            <li>
               <a href="<%=users_path%>">Users</a>
             </li>
             <li>
